testsuite/tests/properties/invalid_n_propgate/bad_arity_1_2.lkt
import common

class BarNode: FooNode {
    @ignored fun main_prop(): Equation =
        node.ref_var <- BazNode.prop1%(node.type_var, node.type_var)
}
